# AppLens

./: .dockerignore  .gitignore  Caddyfile  Jenkinsfile  README-LOCAL.md  README-RCA.md  README.md  START-BACKEND.sh  START-FRONTEND.sh  docker-compose.prod.yml  docker-compose.yml  env.example  fix-database-connection.md  payment-service-error-analysis.md  push-to-dockerhub.sh  setup-database.sh  simple-error-log.txt  start-local.sh  start.sh  test_error_log_3_direct.txt  user-service-error-log.txt
backend/: .dockerignore  .env.test  Dockerfile  alembic.ini  pyproject.toml  test_runner.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  error_agent.py  graph_agent.py  nlq_agent.py  orchestrator.py  parser_agent.py  scanner_agent.py  whatif_agent.py
backend/app/auth/: __init__.py  github_oauth.py
backend/app/db/: base.py  models.py
backend/app/routes/: auth.py  chat.py  graph.py  nlq.py  repos.py  scan.py
backend/app/services/: code_fetch.py  embeddings.py  graph_builder.py  mcp_client.py  normalize.py  scan_pipeline.py
backend/app/services/detectors/: __init__.py  http_java.py  http_javascript.py  http_python.py  kafka_java.py  kafka_node.py  kafka_python.py
backend/tests/: conftest.py  conftest_minimal.py  test_agents.py  test_agents_simple.py  test_config.py  test_detectors.py  test_graph_route.py  test_models.py  test_routes.py  test_services.py
docs/: AI-CHAT-FLOW.md  ENV-SETUP.md  IMPLEMENTATION_GUIDE.md  QUICKSTART.md  SETUP.md  WHY-GITHUB-OAUTH.md
(+27 files in other folders)
