[tool.poetry]
name = "applens-backend"
version = "0.1.0"
description = "AppLens Backend - Microservice Dependency Visualization"
authors = ["AppLens Team"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
asyncpg = "^0.29.0"
httpx = "^0.25.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
crewai = "^0.1.0"
langchain = "^0.1.0"
langchain-openai = "^0.0.2"
openai = "^1.3.0"
pgvector = "^0.2.4"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
greenlet = "^3.2.4"
aiosqlite = "^0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
ruff = "^0.1.6"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

